			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

=================================
VERSION 5.6.5 (February 16, 2006)
=================================

  * MODIFIED: various internals in library(prolog_stack).  Code relying on
    the Prolog structure for representing the stack must be updated.

  * FIXED: incompatibility in GCD handling introduced by recent changes.

  * ADDED: prolog_exception_hook/4: add context to exceptions.  After
    discussion on the mailinglist.

  * ENHANCED: Use call_cleanup in findall/3 and friends to enhance error
    recovery.  Added more test cases.

  * FIXED: GC issue in PL_discard_foreign_frame().  Notably shows up in
    embeded C++ applications, but affect a wider class of programs.
    The bug often shows up as a GC internal error of the form
    After down phase: relocation_cells = X; relocated_cells = Y,
    but other problems can be caused by it as well.  Alan Baljeu.  

  * PORT/CLEANUP: Various issues around setenv/2 and unsetenv/1.  Richard
    O'Keefe.

  * FIXED: proper error signalling in rdiv/2 on division-by-zero.  Mike
    Elston.

  * MODIFIED: new AVL implementation of library(assoc) from work by various
    authors, merged and documented by Markus Triska.  The argument order of
    gen_assoc/3 has been modified from the original DEC10 library 
    for compatibility woth Quintus and SICStus.

  * ENHANCED: Try to be more clever finding a browser. Jochem Liem.

  * FIXED: arg/3 documentation.  Markus Triska.

=================================
VERSION 5.6.4 (February 12, 2006)
=================================

  * FIXED: copy_term_nat/2 deleted attributes from term being copied.
    Leslie de Koninck.

  * MODIFIED: Added byte-position to stream-position terms.  This means