@@ -554,3 +554,4 @@ ATOM("zero_divisor"),
 ATOM("lsb"),
 ATOM("popcount"),
 ATOM("radix"),
+ATOM("argumentlimit"),
