@@ -554,3 +554,4 @@
 #define ATOM_lsb          MK_ATOM(553)
 #define ATOM_popcount     MK_ATOM(554)
 #define ATOM_radix        MK_ATOM(555)
+#define ATOM_argumentlimit MK_ATOM(556)
